--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "html-webpack-plugin": "^4.2.0",
     "jquery": "^3.5.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "popper.js": "^1.16.1",
     "sass-loader": "^8.0.2",
@@ -30,6 +29,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^3.0.0"
+    "clean-webpack-plugin": "^3.0.0",
+    "sass": "^1.38.0"
   }
 }
